# easyseop

./: CLAUDE.md  README.md
meetcute/: .gitignore  MANUAL.md  README.md  SETUP-TUNNEL.md  dev.sh  pyproject.toml  sync-from-upstream.sh  tunnel.sh
meetcute/app/: auth.py  backfill_thumbs.py  backup.py  bot.py  config.py  crypto.py  database.py  main.py  models.py  nicknames.py  notices.py  notifications.py  person_events.py  reminders.py  seed.py  startup_notice.py  templating.py  url_watcher.py
meetcute/app/routers/: activity.py  auth.py  blacklist.py  chat.py  compatibility.py  encounters.py  manual.py  persons.py  requests.py  settings.py  stats.py  users.py
meetcute/app/services/: activity.py  activity_log.py  revisions.py  stats.py  status.py  visibility.py
meetcute/app/static/: manifest.webmanifest
meetcute/app/templates/: base.html  compatibility.html  index.html  manual.html  manual_index.html  manual_section.html  settings.html
meetcute/app/templates/activity/: list.html
meetcute/app/templates/auth/: forgot.html  forgot_code.html  login.html  pending.html  register.html  reset.html
meetcute/app/templates/blacklist/: list.html
meetcute/docs/: MANUAL_BOT.md  MANUAL_OPS.md  MANUAL_WEB.md  PERFORMANCE.md
meetcute/tests/: conftest.py  test_activity_log.py  test_audience_notify.py  test_auth.py  test_birth_year_filter.py  test_chat.py  test_create_visibility_and_photo_notify.py  test_crypto.py  test_password_reset.py  test_person_status_override.py  test_persons.py  test_requests.py  test_startup_notice.py  test_stats.py  test_visibility_encounters.py
(+15 files in other folders)
