[project]
name = "meetcute"
version = "0.1.0"
description = "Private matchmaking admin tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pillow>=10.4",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7",
]
